# NotepadMac---Windows-Notepad-For-Mac

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml  update-cask.yml
Casks/: notepadformac.rb
scripts/: release.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_ops.rs  lib.rs  main.rs  models.rs  session.rs
src/components/: Editor.css  Editor.tsx  FindReplace.css  FindReplace.tsx  MenuBar.css  MenuBar.tsx  Settings.css  Settings.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  UnsavedChangesModal.css  UnsavedChangesModal.tsx
src/hooks/: useFileOperations.ts  useKeyboardShortcuts.ts  useTheme.ts
src/stores/: editorStore.ts  settingsStore.ts
