[package]
name = "notepadmac"
version = "1.0.3"
description = "Windows 11 Notepad clone for macOS"
authors = ["Arijit Deb"]
edition = "2021"

[lib]
name = "notepadmac_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
dirs = "5"
